feat(docs): add global package manager selector for install commands (#28)
* feat(docs): add global package manager selector for install commands

- Add InstallCommandTabs component with global synchronization
- Add PackageManagerContext for global state management
- Create utility function getInstallCommand (similar to CLI package)
- Replace repetitive Tabs in documentation with reusable component
- Fix TypeScript errors

Closes #27

* refactor(docs): remove PackageManagerContext and simplify InstallCommandTabs

* fix(docs): use DynamicCodeBlock for proper code formatting and copy button

- Replace CodeBlock/Pre with DynamicCodeBlock component
- Maintains syntax highlighting and copy button functionality
- Simplify component by using fumadocs DynamicCodeBlock API

* refactor(docs): replace all install command tabs with InstallCommandTabs component

- Replace repetitive Tabs components with InstallCommandTabs across all docs
- All install commands now use global package manager synchronization via groupId
- Updated 20+ documentation files to use the new component
- Maintains syntax highlighting and copy button functionality with DynamicCodeBlock

* feat: add nested install command tabs component for server setup

- Create NestedInstallCommandTabs component for nested tab scenarios
- Support outer tabs (e.g., database type) and inner tabs (package manager)
- Combine regular and dev dependencies in single code block with two lines
- Register Tabs and Tab components in MDX components
- Update server-setup.mdx to use new component

* refactor: simplify nested tabs by extending InstallCommandTabs

- Extend InstallCommandTabs to support devPackages prop
- Remove NestedInstallCommandTabs component (no longer needed)
- Use manual outer Tabs with InstallCommandTabs in server-setup.mdx
- More flexible and reusable approach

* refactor: simplify InstallCommandTabs API by removing dev prop

- Remove 'dev' boolean prop, use 'devPackages' instead
- Make 'packages' optional (can u

--- a/apps/docs/content/docs/guides/server-setup.mdx
+++ b/apps/docs/content/docs/guides/server-setup.mdx
@@ -22,24 +22,24 @@ This guide walks through setting up a RippleDB server with HTTP endpoints for sy
 <Step>
 ### Install Dependencies
 
-<Tabs items={['SQLite', 'Turso', 'Drizzle']}>
+<Tabs items={['SQLite', 'Turso', 'Drizzle']} groupId="database-adapter">
   <Tab value="SQLite">
-```bash
-npm install @rippledb/core @rippledb/db-sqlite @rippledb/materialize-db better-sqlite3 express
-npm install -D typescript @types/better-sqlite3 @types/express tsx
-```
+    <InstallCommandTabs
+      packages={['@rippledb/core', '@rippledb/db-sqlite', '@rippledb/materialize-db', 'better-sqlite3', 'express']}
+      devPackages={['typescript', '@types/better-sqlite3', '@types/express', 'tsx']}
+    />
   </Tab>
   <Tab value="Turso">
-```bash
-npm install @rippledb/core @rippledb/db-turso @rippledb/materialize-db @libsql/client express
-npm install -D typescript @types/express tsx
-```
+    <InstallCommandTabs
+      packages={['@rippledb/core', '@rippledb/db-turso', '@rippledb/materialize-db', '@libsql/client', 'express']}
+      devPackages={['typescript', '@types/express', 'tsx']}
+    />
   </Tab>
   <Tab value="Drizzle">
-```bash
-npm install @rippledb/core @rippledb/db-drizzle @rippledb/materialize-drizzle drizzle-orm better-sqlite3 express
-npm install -D typescript @types/better-sqlite3 @types/express tsx
-```
+    <InstallCommandTabs
+      packages={['@rippledb/core', '@rippledb/db-drizzle', '@rippledb/materialize-drizzle', 'drizzle-orm', 'better-sqlite3', 'express']}
+      devPackages={['typescript', '@types/better-sqlite3', '@types/express', 'tsx']}
+    />
   </Tab>
 </Tabs>
 </Step>
@@ -87,7 +87,7 @@ In a distributed setup, each server instance needs a unique `NODE_ID`.
 <Step>
 ### Configure the Database
 
-<Tabs items={['SQLite', 'Turso', 'Drizzle']}>
+<Tabs items={['SQLite', 'Turso', 'Drizzle']} groupId="database-adapter">
   <Tab value="SQLite">
 ```ts title="src/db.ts"
 import { SqliteDb } from '@rippledb/db-sqlite';
