--- a/apps/docs/content/docs/reference/cli.mdx
+++ b/apps/docs/content/docs/reference/cli.mdx
@@ -3,7 +3,6 @@ title: "@rippledb/cli"
 description: CLI tools for RippleDB - schema codegen and utilities
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/cli
@@ -12,23 +11,7 @@ CLI tools for RippleDB, including schema codegen from external sources like Driz
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add -D @rippledb/cli
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install -D @rippledb/cli
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add -D @rippledb/cli
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs devPackages="@rippledb/cli" />
 
 ## Commands
 
