--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -41,22 +41,37 @@ This means:
 
 ```ts
 import { SqliteDb } from '@rippledb/db-sqlite';
-import { createMaterializerConfig } from '@rippledb/materialize-db';
+import { createSyncSqlExecutor } from '@rippledb/materialize-db';
+import { makeUpsert } from '@rippledb/core';
+import { tickHlc, createHlcState } from '@rippledb/core';
 
 const db = new SqliteDb({
   filename: './data.db',
-  materializer: ({ db }) => createMaterializerConfig({ db }),
+  materializer: ({ db }) => {
+    const sqlConfig = {
+      dialect: 'sqlite',
+      tableMap: { todos: 'todos' },
+      fieldMap: { todos: { id: 'id', title: 'title', done: 'done' } },
+    } as const;
+    return {
+      ...sqlConfig,
+      executor: createSyncSqlExecutor(db, sqlConfig),
+    };
+  },
 });
 
 // Append a change
-await db.append('my-stream', [{
-  entity: 'todos',
-  entityId: 'todo-1',
-  kind: 'upsert',
-  patch: { title: 'Buy milk', done: false },
-  tags: { title: hlc(), done: hlc() },
-  hlc: hlc(),
-}]);
+const hlc = tickHlc(createHlcState('node-1'), Date.now());
+await db.append({
+  stream: 'my-stream',
+  changes: [makeUpsert({
+    stream: 'my-stream',
+    entity: 'todos',
+    entityId: 'todo-1',
+    patch: { id: 'todo-1', title: 'Buy milk', done: false },
+    hlc,
+  })],
+});
 ```
 
 ## Get Started
