--- a/apps/docs/content/docs/guides/materialization.mdx
+++ b/apps/docs/content/docs/guides/materialization.mdx
@@ -136,37 +136,47 @@ When a change arrives, each field is compared independently:
 ### materialize-db Example
 
 ```ts
+import { defineSchema, s } from '@rippledb/core';
 import { SqliteDb } from '@rippledb/db-sqlite';
-import { createSyncSqlExecutor } from '@rippledb/materialize-db';
+import { createSyncMaterializer } from '@rippledb/materialize-db';
 
-const db = new SqliteDb<MySchema>({
+const schema = defineSchema({
+  todos: { id: s.string(), title: s.string(), done: s.boolean() },
+});
+
+const db = new SqliteDb({
   filename: './data.db',
-  materializer: ({ db }) => {
-    const sqlConfig = {
+  schema,
+  materializer: ({ db, schema }) =>
+    createSyncMaterializer({
+      schema,
+      db,
       dialect: 'sqlite',
       tableMap: { todos: 'todos' },
       fieldMap: { todos: { id: 'id', title: 'title', done: 'done' } },
-    } as const;
-    return {
-      ...sqlConfig,
-      executor: createSyncSqlExecutor(db, sqlConfig),
-    };
-  },
+    }),
 });
 ```
 
 ### materialize-drizzle Example
 
 ```ts
+import { defineSchema, s } from '@rippledb/core';
 import { SqliteDb } from '@rippledb/db-sqlite';
-import { createDrizzleSyncMaterializerConfig } from '@rippledb/materialize-drizzle';
+import { createDrizzleSyncMaterializer } from '@rippledb/materialize-drizzle';
 import { drizzle } from 'drizzle-orm/better-sqlite3';
+
+const schema = defineSchema({
+  todos: { id: s.string(), title: s.string(), done: s.boolean() },
+});
 
 const db = new SqliteDb<MySchema>({
   filename: './data.db',
-  materializer: ({ db }) => {
+  schema,
+  materializer: ({ db, schema }) => {
     const drizzleDb = drizzle(db);
-    return createDrizzleSyncMaterializerConfig(drizzleDb, {
+    return createDrizzleSyncMaterializer({
+      schema,
       tableMap: { todos: todosTable },
       tagsTableDef: tagsTable,
       getTableConfig,
@@ -197,29 +207,35 @@ CREATE TABLE ripple_tags (
 For advanced cases, implement a custom executor:
 
 ```ts
+import { createMaterializer } from '@rippledb/materialize-db';
+
 const db = new SqliteDb<MySchema>({
   filename: './data.db',
-  materializer: ({ db }) => ({
-    tableMap: { todos: 'todos' },
-    fieldMap: { todos: { id: 'id', title: 'title', done: 'done' } },
-    executor: {
-      ensureTagsTable: async () => {
-        // Create tags table
+  schema,
+  materializer: ({ db, schema }) =>
+    createMaterializer({
+      schema,
+      db,
+      tableMap: { todos: 'todos' },
+      fieldMap: { todos: { id: 'id', title: 'title', done: 'done' } },
+      executor: {
+        ensureTagsTable: async (db) => {
+          // Create tags table
+        },
+        loadTags: async (db, entity, id) => {
+          // Return TagsRow or null
+        },
+        saveTags: async (db, entity, id, dataJson, tagsJson) => {
+          // Upsert tags row
+        },
+        removeTags: async (db, entity, id, dataJson, tagsJson, deletedTag) => {
+          // Upsert with deleted flag
+        },
+        saveEntity: async (db, tableName, id, columns, values, updates) => {
+          // Upsert domain table
+        },
       },
-      loadTags: async (entity, id) => {
-        // Return TagsRow or null
-      },
-      saveTags: async (entity, id, dataJson, tagsJson) => {
-        // Upsert tags row
-      },
-      removeTags: async (entity, id, dataJson, tagsJson, deletedTag) => {
-        // Upsert with deleted flag
-      },
-      saveEntity: async (tableName, id, columns, values, updates) => {
-        // Upsert domain table
-      },
-    },
-  }),
+    }),
 });
 ```
 
